--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+    <!-- Font Awesome npm -->
+    <!-- <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"> -->
+    <!-- End Font Awesome npm -->
+    <!-- Font Awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- End Font Awesome cdn -->
     <link rel="shortcut icon" href="./images/faviIconMawaqit.png" type="image/x-icon">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,7 +123,13 @@
         </div>
     </main>
 
-    <script src="./node_modules/axios/dist/axios.min.js"></script>
+    <!-- use CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- // End Axios CDN // -->
+
+    <!-- Axios npm -->
+    <!-- <script src="./node_modules/axios/dist/axios.min.js"></script> -->
+    <!-- End Axios npm -->
     <script src="./script/app.js"></script>
 </body>
 </html>
